--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="search_weather_by_country_city_or_zip_code">Search Weather By Country, City or ZIP Code</string>
     <string name="todo">TODO</string>
     <string name="Home">Home</string>
+    <string name="action_settings">SETTINGS</string>
 </resources>
